Added Bean Validation Framework; Use of new algorithm modules

--- a/i18n/src/main/resources/ajp/electoralsystems/i18n/messages.properties
+++ b/i18n/src/main/resources/ajp/electoralsystems/i18n/messages.properties
@@ -10,9 +10,35 @@ Save=Guardar ..
 Title=Sistemas Electorales
 View=Ver
 
+#Error
+Error=Error
+Error.NoAlgorithmSelected=Ningún algoritmo seleccionado
+Error.InvalidDistrictData=Datos de la circunscripción no válidos 
+Error.InvalidDistrictData.TotalVotesBiggerThanCensus = El número de votos es mayor que el censo electoral
+Error.InvalidDistrictData.TotalSeatsBiggerThanCensus = El número de escaños es mayor que el censo electoral
+Error.InvalidDistrictData.NumberOfPartiesBiggerThanCensus = El número de partidos es mayor que el censo electoral
+Error.InvalidDistrictData.NoParties = No hay partidos
+Error.InvalidDistrictData.NoValidVotes= No hay votos válidos
+Error.InvalidDistrictData.InvalidName = Nombre no válido
+Error.InvalidDistrictData.InvalidCensus = Censo no válido
+Error.InvalidDistrictData.InvalidSeats = Número de escaños no válido
+Error.InvalidDistrictData.InvalidPartyName = Nombre de partido no válido
+Error.GettingFile=Error leyendo el fichero {0}
+Error.SavingFile=Error escribiendo en el fichero {0}
+
+# Configuration
+Algorithms=Algoritmos
+VoteThreshold=Umbral de votos %
+PhantomParties=Partidos fantasma
+AbstentionAsParty=Abstención como partido
+BlankVotesAsParty=Voto blanco como partido
+InvalidVotesAsParty=Voto nulo como partido
+
+#Others
 Algorithm=Algoritmo
+Algorithm.Comparator=Comparación de algoritmos
 Algorithm.Impl=Clase de implementación del algoritmo
-DevelopedBy=Andres Jimenez Peñalver, 2019
+DevelopedBy=Andrés Jiménez Peñalver, 2019
 District.New=Nueva circunscripción
 District.Open=Abrir circunscripción
 District.Save=Guardar circunscripción
@@ -20,6 +46,8 @@ District.CalculateSeats=Calcular escaños
 District.Data=Datos de la circunscripción
 District.Outcome=Resultados de la circunscripción
 ExecTime=Tiempo de ejecución
+FileChooser.Open=Elija un fichero de datos de una circunscripción
+FileChooser.Save=Elija un fichero para guardar los datos de la circunscripción
 Chart.Bar=Gráfico de barras
 Chart.Pie=Gráfico de tarta
 Chart.Ring=Gráfico en anillo
@@ -42,34 +70,10 @@ Party.Add=Añadir partido
 Party.Delete=Borrar partido
 Abstention=Abstención (%)
 Outcome=Resultados
+Quota=Cuota
 Votes=Votos
 Votes.Blank=Votos en blanco
 Votes.Invalid=Votos nulos
 Votes.Total=Total votos
 Votes.Percentage=Porcentajes de votos
 Votes.Number=Número de votos
-
-FileChooser.Open=Elija un fichero de datos de una circunscripción
-FileChooser.Save=Elija un fichero para guardar los datos de la circunscripción
-
-Error=Error
-Error.NoAlgorithmSelected=Ningún algoritmo seleccionado
-Error.InvalidDistrictData=Datos de la circunscripción no válidos 
-Error.InvalidDistrictData.TotalVotesBiggerThanCensus = El número de votos es mayor que el censo electoral
-Error.InvalidDistrictData.TotalSeatsBiggerThanCensus = El número de escaños es mayor que el censo electoral
-Error.InvalidDistrictData.NumberOfPartiesBiggerThanCensus = El número de partidos es mayor que el censo electoral
-Error.InvalidDistrictData.NoParties = No hay partidos
-Error.InvalidDistrictData.InvalidName = Nombre no válido
-Error.InvalidDistrictData.InvalidCensus = Censo no válido
-Error.InvalidDistrictData.InvalidSeats = Número de escaños no válido
-Error.InvalidDistrictData.InvalidParty = Partido no válido
-Error.GettingFile=Error leyendo el fichero {0}
-Error.SavingFile=Error escribiendo en el fichero {0}
-
-# Configuration
-Algorithms=Algoritmos
-VoteThreshold=Umbral de votos %
-PhantomParties=Partidos fantasma
-AbstentionAsParty=Abstención como partido
-BlankVotesAsParty=Voto blanco como partido
-InvalidVotesAsParty=Voto nulo como partido
