--- a/i18n/src/main/resources/ajp/electoralsystems/i18n/messages_en.properties
+++ b/i18n/src/main/resources/ajp/electoralsystems/i18n/messages_en.properties
@@ -10,9 +10,35 @@ Save=Save ..
 Title=Electoral Systems
 View=View
 
+#Error
+Error=Error
+Error.NoAlgorithmSelected=No Algorithm Selected
+Error.InvalidDistrictData=Invalid District Data 
+Error.InvalidDistrictData.TotalVotesBiggerThanCensus = Total votes bigger than census
+Error.InvalidDistrictData.TotalSeatsBiggerThanCensus = Total seats bigger than census
+Error.InvalidDistrictData.NumberOfPartiesBiggerThanCensus = Number of parties bigger than census
+Error.InvalidDistrictData.NoParties = No parties
+Error.InvalidDistrictData.NoValidVotes= No valid votes
+Error.InvalidDistrictData.InvalidName = Invalid Name
+Error.InvalidDistrictData.InvalidCensus = Invalid Census
+Error.InvalidDistrictData.InvalidSeats = Invalid Seats
+Error.InvalidDistrictData.InvalidPartyName = Invalid Party Name
+Error.GettingFile=Error reading file {0}
+Error.SavingFile=Error writing file {0}
+
+#Configuration
+Algorithms=Algorithms
+VoteThreshold=Vote Threshold %
+PhantomParties=Phantom Parties
+AbstentionAsParty=Abstention as Party
+BlankVotesAsParty=Blank Votes as Party
+InvalidVotesAsParty=Invalid Votes as Party
+
+#Others
 Algorithm=Algorithm
+Algorithm.Comparator=Algorithm Comparation
 Algorithm.Impl=Algorithm Implementation Class
-DevelopedBy=Andres Jimenez Peñalver, 2019
+DevelopedBy=Andrés Jiménez Peñalver, 2019
 District.New=New District
 District.Open=Open District
 District.Save=Save District
@@ -20,6 +46,8 @@ District.CalculateSeats=Calculate Seats
 District.Data=District Data
 District.Outcome=District Outcome
 ExecTime=Execution Time
+FileChooser.Open=Choose a District Data File
+FileChooser.Save=Choose a File to Save District Data 
 Chart.Bar=Bar Chart
 Chart.Pie=Pie Chart
 Chart.Ring=Ring Chart
@@ -42,34 +70,10 @@ Party.Add=Add Party
 Party.Delete=Delete Party
 Abstention=Abstention (%)
 Outcome=Outcome
+Quota=Quota
 Votes=Votes
 Votes.Blank=Blank Votes
 Votes.Invalid=Invalid Votes
 Votes.Total=Total Votes
 Votes.Number=Vote Number
 Votes.Percentage=Vote Percentage
-
-FileChooser.Open=Choose a District Data File
-FileChooser.Save=Choose a File to Save District Data 
-
-Error=Error
-Error.NoAlgorithmSelected=No Algorithm Selected
-Error.InvalidDistrictData=Invalid District Data 
-Error.InvalidDistrictData.TotalVotesBiggerThanCensus = Total votes bigger than census
-Error.InvalidDistrictData.TotalSeatsBiggerThanCensus = Total seats bigger than census
-Error.InvalidDistrictData.NumberOfPartiesBiggerThanCensus = Number of parties bigger than census
-Error.InvalidDistrictData.NoParties = No parties
-Error.InvalidDistrictData.InvalidName = Invalid Name
-Error.InvalidDistrictData.InvalidCensus = Invalid Census
-Error.InvalidDistrictData.InvalidSeats = Invalid Seats
-Error.InvalidDistrictData.InvalidParty = Invalid Party
-Error.GettingFile=Error reading file {0}
-Error.SavingFile=Error writing file {0}
-
-#Configuration
-Algorithms=Algorithms
-VoteThreshold=Vote Threshold %
-PhantomParties=Phantom Parties
-AbstentionAsParty=Abstention as Party
-BlankVotesAsParty=Blank Votes as Party
-InvalidVotesAsParty=Invalid Votes as Party
