New valid votes label in UI

--- a/i18n/src/main/resources/ajp/electoralsystems/i18n/messages.properties
+++ b/i18n/src/main/resources/ajp/electoralsystems/i18n/messages.properties
@@ -73,7 +73,9 @@ Outcome=Resultados
 Quota=Cuota
 Votes=Votos
 Votes.Blank=Votos en blanco
+Votes.DiffLastSeat=Dif.último escaño
 Votes.Invalid=Votos nulos
+Votes.Valid=Votos válidos
 Votes.Total=Total votos
 Votes.Percentage=Porcentajes de votos
 Votes.Number=Número de votos
