--- a/i18n/src/main/resources/ajp/electoralsystems/i18n/messages_en.properties
+++ b/i18n/src/main/resources/ajp/electoralsystems/i18n/messages_en.properties
@@ -73,7 +73,9 @@ Outcome=Outcome
 Quota=Quota
 Votes=Votes
 Votes.Blank=Blank Votes
+Votes.DiffLastSeat=Diff last seat
 Votes.Invalid=Invalid Votes
+Votes.Valid=Valid votes
 Votes.Total=Total Votes
 Votes.Number=Vote Number
 Votes.Percentage=Vote Percentage
